# queens-reasoner

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: github-actions-ci-cd.yaml  upload-pypi.yaml
docs/: conf.py
master/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
master/.doctrees/: environment.pickle  index.doctree
master/.doctrees/autoapi/: index.doctree
master/_modules/: index.html
master/_modules/queens_reasoner/: main.html  reasoner.html  setup.html  utils.html
master/_sources/autoapi/: index.rst.txt
master/autoapi/: index.html
master/autoapi/queens_reasoner/: index.html
queens_reasoner/: __init__.py  main.py  reasoner.py  setup.py  utils.py
tests/: test_reasoner.py  test_run.py
v0.3.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
v0.3.0/.doctrees/: environment.pickle  index.doctree
v0.3.0/.doctrees/autoapi/: index.doctree
v0.3.0/_modules/: index.html
v0.3.0/_modules/queens_reasoner/: main.html  reasoner.html  setup.html  utils.html
v0.3.0/_sources/: index.rst.txt
v0.3.0/autoapi/: index.html
v0.3.0/autoapi/queens_reasoner/: index.html
v0.3.1/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.3.1/.doctrees/: environment.pickle  index.doctree
v0.3.1/.doctrees/autoapi/: index.doctree
v0.3.1/_modules/: index.html
v0.3.1/_modules/queens_reasoner/: main.html  reasoner.html  setup.html  utils.html
v0.3.1/autoapi/: index.html
v0.3.1/autoapi/queens_reasoner/: index.html
(+32 files in other folders)
