[project]
name = "queens-reasoner"
version = "0.1.0"
authors = [
  { name="Xiurui Zhu", email="zxr6@163.com" },
]
description = "Solver for Queens game with reasoning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "queens-slvr>=0.1.13",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
queens-reasoner = "queens_reasoner.main:run"
install-playwright-browsers = "queens_reasoner.setup:install_playwright_browsers_"

[project.urls]
Homepage = "https://github.com/zhuxr11/queens-reasoner"
Issues = "https://github.com/zhuxr11/queens-reasoner/issues"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.ruff.lint]
select = ["I", "E", "F", "B", "U"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
